# vulkan-base

./: Cargo.toml  README.md  compile_shaders.sh
ash-helpers/: Cargo.toml
ash-helpers/src/: lib.rs
shaders/: colour.frag  cube.vert  plane.vert  shader.vert  textured.frag  triangle.vert
shaders/compiled/: cube.vert.spv  plane.vert.spv  shader.vert.spv  textured.frag.spv  triangle.vert.spv
src/: main.rs
