[package]
name = "vulkan-triangle"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
ash = "0.32.0"
ash-window = "0.6.0"
byte-strings = "0.1.3"
bytemuck = { version = "1.5.1", features = ["derive"] }
ultraviolet = { version = "0.8.0", features = ["bytemuck"] }
winit = "0.24.0"
